Change margin to padding to avoid overspill

--- a/app/assets/sass/explore.scss
+++ b/app/assets/sass/explore.scss
@@ -203,6 +203,8 @@ $wide-width: 1300px;
     }
     .lede {
       font-size: 20px;
+      padding-bottom: 45px;
+      margin-bottom: 0;
     }
   }
 
